--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <meta name="theme-color" content="#25A7E0" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37753223-4"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37753223-4"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() {
@@ -20,7 +20,7 @@
         gtag("js", new Date());
 
         gtag("config", "UA-37753223-4");
-    </script>
+    </script> -->
   </head>
 <body>
 <header class="banner" data-sticky-container>
@@ -52,57 +52,99 @@
             </div>
         </div>
     </div>
-</header>
-<section class="carouselcontainer">
-    <div class="homecarousel">
-        <div class="citem">
-            <figure>
-                <img src="https://source.unsplash.com/1600x900/?building,architecture" alt="">
-            </figure>
+</header><section class="carouselcontainer">
+    <div class="homecarousel slick-slider">
+        <div>
+            <div class="citem">
+                <figure data-title="Beautyful ipsum" data-description="Description goes here">
+                    <a href="#"><img src="https://source.unsplash.com/1600x900/?building,architecture" alt=""></a>
+                </figure>
+            </div>
         </div>
-        <div class="citem">
-            <figure>
-                <img src="https://source.unsplash.com/1200x1200/?building,architecture" alt="">
-            </figure>
+        <div>
+            <div class="citem">
+                <aside class="ipanel">
+                    <header class="ipanel__header">
+                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <p>2015</p>
+                    </header>
+                    <div class="ipanel__details">
+                        <h4>Project info</h4>
+                        <p>Amet consectetur adipisicing elit. Consequuntur voluptatem accusamus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum dolore iure illo alias. Lorem ipsum dolor sit amet.</p>
+                        <h4>Client</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                    <h4 class="ipanel__"></h4>
+                </aside>
+                <figure data-title="Title ipsum goes here" data-description="Custom description goes here">
+                    <a href="#"><img src="https://source.unsplash.com/1200x1200/?building,architecture" alt=""></a>
+                </figure>
+            </div>
+        </div>
+        <div>
+            <div class="citem">
+                <aside class="ipanel">
+                    <header class="ipanel__header">
+                        <h3>Sunset boulevard</h3>
+                        <p>2020</p>
+                    </header>
+                    <div class="ipanel__details">
+                        <h4>Project info</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum dolore iure illo alias. Lorem ipsum dolor sit amet.</p>
+                        <h4>Client</h4>
+                        <p>Helen &amp; Hard</p>
+                    </div>
+                    <h4 class="ipanel__"></h4>
+                </aside>
+                <figure data-title="Sunset boulevard" data-description="Helen &amp; Hard">
+                    <a href="#"><img src="https://source.unsplash.com/1920x1024/?building,architecture" alt=""></a>
+                    <figcaption>Lorem ipsum dolor sit amet<em>lorem ipsum</em></figcaption>
+                </figure>
+            </div>
+        </div>
+        <div>
+            <div class="citem">
+                <figure data-title="Lorem ipsum" data-description="Some description goes here">
+                    <a href="#"><img src="https://source.unsplash.com/600x1024/?building,architecture" alt=""></a>
+                </figure>
+            </div>
+        </div>
+        <div>
+            <div class="citem">
+                <figure data-title="Lorem ipsum" data-description="Some description goes here">
+                    <a href="#"><img src="https://source.unsplash.com/1600x1024/?building,architecture" alt=""></a>
+                </figure>
+            </div>
+        </div>
+        <div>
+            <div class="citem">
+                <figure data-title="Lorem ipsum" data-description="Some description goes here">
+                    <a href="#"><img src="https://source.unsplash.com/1600x1200/?architecture" alt=""></a>
+                </figure>
+            </div>
         </div>
 
-        <div class="citem">
-            <figure>
-                <img src="https://source.unsplash.com/1920x1024/?building,architecture" alt="">
-            </figure>
+        <div>
+            <div class="citem">
+                <figure data-title="Lorem ipsum" data-description="Some description goes here">
+                    <a href="#"><img src="https://source.unsplash.com/1200x1000/?building" alt=""></a>
+                </figure>
+            </div>
         </div>
 
-        <div class="citem">
-            <figure>
-                <img src="https://source.unsplash.com/600x1024/?building,architecture" alt="">
-            </figure>
-        </div>
-        <div class="citem">
-            <figure>
-                <img src="https://source.unsplash.com/1600x1024/?building,architecture" alt="">
-            </figure>
-        </div>
-        <div class="citem">
-            <figure>
-                <img src="https://source.unsplash.com/1600x1200/?architecture" alt="">
-            </figure>
-        </div>
-
-        <div class="citem">
-            <figure>
-                <img src="https://source.unsplash.com/1200x1000/?building" alt="">
-            </figure>
-        </div>
-
-        <div class="citem">
-            <figure>
-                <img src="https://source.unsplash.com/620x1000/" alt="">
-            </figure>
+        <div>
+            <div class="citem">
+                <figure data-title="Lorem ipsum" data-description="Some description goes here">
+                    <a href="#"><img src="https://source.unsplash.com/620x1000/" alt=""></a>
+                </figure>
+            </div>
         </div>
     </div>
+    <h3 class="carouselstatus">
+        Lorem ipsum dolor sit amet<em>lorem ipsum</em>
+    </h3>
 
 </section>
-
 <footer class="sitefooter" role="contentinfo">
     <div class="grid-container ">
         <div class="grid-x grid-margin-x">
