--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="grid-x grid-margin-x align-middle">
                 <div class="auto cell">
                     <div class="banner__branding">
-                        <a class="brand" href="https://brickvisual.com/">
+                        <a class="brand" href="">
                             <img class="brand__fulllogo" src="assets/img/brick_communicating_architecture.svg" alt="Brick Visual | Communicating Architecture">
                         </a>
                     </div>
@@ -52,12 +52,24 @@
             </div>
         </div>
     </div>
-</header><section class="carouselcontainer">
+</header><section class="carouselcontainer grid-container">
     <div class="homecarousel slick-slider">
         <div>
             <div class="citem">
+                <aside class="ipanel">
+                    <header class="ipanel__header">
+                        <h3>Lipsum dolor sit amet</h3>
+                        <p>2016</p>
+                    </header>
+                    <div class="ipanel__details">
+                        <h4>Project info</h4>
+                        <p>Lipisicing elit. Consequuntur voluptatem accusamus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum dolore iure illo alias. Lorem ipsum dolor sit amet.</p>
+                        <h4>Client</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </aside>
                 <figure data-title="Beautyful ipsum" data-description="Description goes here">
-                    <a href="#"><img src="https://source.unsplash.com/1600x900/?building,architecture" alt=""></a>
+                    <a href="#"><img width="1600" height="900" src="https://source.unsplash.com/1600x900/?building,architecture" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -74,10 +86,9 @@
                         <h4>Client</h4>
                         <p>Lorem ipsum dolor</p>
                     </div>
-                    <h4 class="ipanel__"></h4>
                 </aside>
                 <figure data-title="Title ipsum goes here" data-description="Custom description goes here">
-                    <a href="#"><img src="https://source.unsplash.com/1200x1200/?building,architecture" alt=""></a>
+                    <a href="#"><img width="1200" height="1200" src="https://source.unsplash.com/1200x1200/?building,architecture" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -94,32 +105,67 @@
                         <h4>Client</h4>
                         <p>Helen &amp; Hard</p>
                     </div>
-                    <h4 class="ipanel__"></h4>
                 </aside>
                 <figure data-title="Sunset boulevard" data-description="Helen &amp; Hard">
-                    <a href="#"><img src="https://source.unsplash.com/1920x1024/?building,architecture" alt=""></a>
+                    <a href="#"><img width="1920" height="1024" src="https://source.unsplash.com/1920x1024/?building,architecture" alt=""></a>
                     <figcaption>Lorem ipsum dolor sit amet<em>lorem ipsum</em></figcaption>
                 </figure>
             </div>
         </div>
         <div>
             <div class="citem">
-                <figure data-title="Lorem ipsum" data-description="Some description goes here">
-                    <a href="#"><img src="https://source.unsplash.com/600x1024/?building,architecture" alt=""></a>
+                <aside class="ipanel">
+                    <header class="ipanel__header">
+                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <p>2015</p>
+                    </header>
+                    <div class="ipanel__details">
+                        <h4>Project info</h4>
+                        <p>Lorem amet consectetur adipisicing elit. Consequuntur voluptatem accusamus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum dolore iure illo alias. Lorem ipsum dolor sit amet.</p>
+                        <h4>Client</h4>
+                        <p>Ipsum dolor</p>
+                    </div>
+                </aside>
+                <figure data-title="Some lorem ipsum" data-description="Some description goes here">
+                    <a href="#"><img width="600" height="1024" src="https://source.unsplash.com/600x1024/?building,architecture" alt=""></a>
                 </figure>
             </div>
         </div>
         <div>
             <div class="citem">
-                <figure data-title="Lorem ipsum" data-description="Some description goes here">
-                    <a href="#"><img src="https://source.unsplash.com/1600x1024/?building,architecture" alt=""></a>
+                <aside class="ipanel">
+                    <header class="ipanel__header">
+                        <h3>Dolor ipsum dolor sit amet</h3>
+                        <p>2015</p>
+                    </header>
+                    <div class="ipanel__details">
+                        <h4>Project info</h4>
+                        <p>Amet consectetur adipisicing elit. Consequuntur voluptatem accusamus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum dolore iure illo alias. Lorem ipsum dolor sit amet.</p>
+                        <h4>Client</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </aside>
+                <figure data-title="Dolor sit amet ipsum" data-description="Some description">
+                    <a href="#"><img width="1600" height="1024" src="https://source.unsplash.com/1600x1024/?building,architecture" alt=""></a>
                 </figure>
             </div>
         </div>
         <div>
             <div class="citem">
-                <figure data-title="Lorem ipsum" data-description="Some description goes here">
-                    <a href="#"><img src="https://source.unsplash.com/1600x1200/?architecture" alt=""></a>
+                <aside class="ipanel">
+                    <header class="ipanel__header">
+                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <p>2015</p>
+                    </header>
+                    <div class="ipanel__details">
+                        <h4>Project info</h4>
+                        <p>Amet consectetur adipisicing elit. Consequuntur voluptatem accusamus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum dolore iure illo alias. Lorem ipsum dolor sit amet.</p>
+                        <h4>Client</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </aside>
+                <figure data-title="Title ipsum goes her" data-description="The description goes here">
+                    <a href="#"><img width="1600" height="1200" src="https://source.unsplash.com/1600x1200/?architecture" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -127,15 +173,27 @@
         <div>
             <div class="citem">
                 <figure data-title="Lorem ipsum" data-description="Some description goes here">
-                    <a href="#"><img src="https://source.unsplash.com/1200x1000/?building" alt=""></a>
+                    <a href="#"><img width="1200" height="1000" src="https://source.unsplash.com/1200x1000/?building" alt=""></a>
                 </figure>
             </div>
         </div>
 
         <div>
             <div class="citem">
+                <aside class="ipanel">
+                    <header class="ipanel__header">
+                        <h3>Dolor sit amet</h3>
+                        <p>2019</p>
+                    </header>
+                    <div class="ipanel__details">
+                        <h4>Project info</h4>
+                        <p>Amet consectetur adipisicing elit. Consequuntur voluptatem accusamus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum dolore iure illo alias. Lorem ipsum dolor sit amet.</p>
+                        <h4>Client</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </aside>
                 <figure data-title="Lorem ipsum" data-description="Some description goes here">
-                    <a href="#"><img src="https://source.unsplash.com/620x1000/" alt=""></a>
+                    <a href="#"><img width="620" height="1000" src="https://source.unsplash.com/620x1000/" alt=""></a>
                 </figure>
             </div>
         </div>
