--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 <body>
 <header class="banner" data-sticky-container>
-    <div class="banner__top" data-sticky data-sticky-on="small" data-options="marginTop:0;">
+    <div class="banner__top" adata-sticky adata-sticky-on="small" adata-options="marginTop:0;">
         <div class="grid-container" data-aos="fade-down" data-aos-delay="500">
             <div class="grid-x grid-margin-x align-middle">
                 <div class="auto cell">
@@ -197,12 +197,140 @@
                 </figure>
             </div>
         </div>
+
+        <div>
+            <div class="citem">
+                <aside class="ipanel">
+                    <header class="ipanel__header">
+                        <h3>Dolor ipsum dolor sit amet</h3>
+                        <p>2015</p>
+                    </header>
+                    <div class="ipanel__details">
+                        <h4>Project info</h4>
+                        <p>Amet consectetur adipisicing elit. Consequuntur voluptatem accusamus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum dolore iure illo alias. Lorem ipsum dolor sit amet.</p>
+                        <h4>Client</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </aside>
+                <figure data-title="Dolor sit amet ipsum" data-description="Some description">
+                    <a href="#"><img width="1600" height="1024" src="https://source.unsplash.com/1600x1024/?building,architecture" alt=""></a>
+                </figure>
+            </div>
+        </div>
+        <div>
+            <div class="citem">
+                <aside class="ipanel">
+                    <header class="ipanel__header">
+                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <p>2015</p>
+                    </header>
+                    <div class="ipanel__details">
+                        <h4>Project info</h4>
+                        <p>Amet consectetur adipisicing elit. Consequuntur voluptatem accusamus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum dolore iure illo alias. Lorem ipsum dolor sit amet.</p>
+                        <h4>Client</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </aside>
+                <figure data-title="Title ipsum goes her" data-description="The description goes here">
+                    <a href="#"><img width="1600" height="1200" src="https://source.unsplash.com/1600x1200/?architecture" alt=""></a>
+                </figure>
+            </div>
+        </div>
+
+        <div>
+            <div class="citem">
+                <figure data-title="Lorem ipsum" data-description="Some description goes here">
+                    <a href="#"><img width="1200" height="1000" src="https://source.unsplash.com/1200x1000/?building" alt=""></a>
+                </figure>
+            </div>
+        </div>
+
+        <div>
+            <div class="citem">
+                <aside class="ipanel">
+                    <header class="ipanel__header">
+                        <h3>Dolor sit amet</h3>
+                        <p>2019</p>
+                    </header>
+                    <div class="ipanel__details">
+                        <h4>Project info</h4>
+                        <p>Amet consectetur adipisicing elit. Consequuntur voluptatem accusamus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum dolore iure illo alias. Lorem ipsum dolor sit amet.</p>
+                        <h4>Client</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </aside>
+                <figure data-title="Lorem ipsum" data-description="Some description goes here">
+                    <a href="#"><img width="620" height="1000" src="https://source.unsplash.com/620x1000/" alt=""></a>
+                </figure>
+            </div>
+        </div>
     </div>
     <h3 class="carouselstatus">
         Lorem ipsum dolor sit amet<em>lorem ipsum</em>
     </h3>
-
 </section>
+<div class="navcarousel">
+    <div>
+        <figure data-title="Beautyful ipsum" data-description="Description goes here">
+            <img width="1600" height="900" src="https://source.unsplash.com/1600x900/?building,architecture" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Title ipsum goes here" data-description="Custom description goes here">
+            <img width="1200" height="1200" src="https://source.unsplash.com/1200x1200/?building,architecture" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Sunset boulevard" data-description="Helen &amp; Hard">
+            <img width="1920" height="1024" src="https://source.unsplash.com/1920x1024/?building,architecture" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Some lorem ipsum" data-description="Some description goes here">
+            <img width="600" height="1024" src="https://source.unsplash.com/600x1024/?building,architecture" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Dolor sit amet ipsum" data-description="Some description">
+            <img width="1600" height="1024" src="https://source.unsplash.com/1600x1024/?building,architecture" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Title ipsum goes her" data-description="The description goes here">
+            <img width="1600" height="1200" src="https://source.unsplash.com/1600x1200/?architecture" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Lorem ipsum" data-description="Some description goes here">
+            <img width="1200" height="1000" src="https://source.unsplash.com/1200x1000/?building" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Lorem ipsum" data-description="Some description goes here">
+            <img width="620" height="1000" src="https://source.unsplash.com/620x1000/" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Dolor sit amet ipsum" data-description="Some description">
+            <img width="1600" height="1024" src="https://source.unsplash.com/1600x1024/?building,architecture" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Title ipsum goes her" data-description="The description goes here">
+            <img width="1600" height="1200" src="https://source.unsplash.com/1600x1200/?architecture" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Lorem ipsum" data-description="Some description goes here">
+            <img width="1200" height="1000" src="https://source.unsplash.com/1200x1000/?building" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Lorem ipsum" data-description="Some description goes here">
+            <img width="620" height="1000" src="https://source.unsplash.com/620x1000/" alt="">
+        </figure>
+    </div>
+</div>
 <footer class="sitefooter" role="contentinfo">
     <div class="grid-container ">
         <div class="grid-x grid-margin-x">
