--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                 </aside>
                 <figure data-title="Beautyful ipsum" data-description="Description goes here">
                     <a href="#"><img width="1600" height="900" src="https://source.unsplash.com/1600x900/?building,architecture" alt=""></a>
+                    <figcaption>
+                        The Big Lorem Ipsum<em>Consectetur adipisicing elit. Autem officia enim debitis</em>
+                    </figcaption>
                 </figure>
             </div>
         </div>
@@ -264,6 +267,17 @@
                 </figure>
             </div>
         </div>
+        <div>
+            <div class="citem">
+                <figure data-title="The End" data-description="Click to see full portfolio">
+                    <a href="https://brickvisual.com/portfolio" class="realjump"><img width="1000" height="1000" src="https://placehold.it/1000x1000/3b3b3b/?text=?" alt=""></a>
+                    <figcaption>
+                        The End<em>Click to see full portfolio</em>
+                    </figcaption>
+
+                </figure>
+            </div>
+        </div>
     </div>
     <h3 class="carouselstatus">
         Lorem ipsum dolor sit amet<em>lorem ipsum</em>
@@ -328,6 +342,11 @@
     <div>
         <figure data-title="Lorem ipsum" data-description="Some description goes here">
             <img width="620" height="1000" src="https://source.unsplash.com/620x1000/" alt="">
+        </figure>
+    </div>
+    <div>
+        <figure data-title="Lorem ipsum" data-description="Some description goes here">
+            <img width="620" height="1000" src="https://placehold.it/320x320/3b3b3b/?text=?" alt="">
         </figure>
     </div>
 </div>
