--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                 </aside>
                 <figure data-title="Sunset boulevard" data-description="Helen &amp; Hard">
-                    <a href="#"><img width="1800" height="1000" src="https://source.unsplash.com/1800x1000/?building,architecture" alt=""></a>
+                    <a href="#"><img width="2560" height="1812" src="assets/img/slides/sample_01.jpg" alt=""></a>
                     <figcaption>
                         Diam eget risus varius blandit sit amet non magna
                     </figcaption>
@@ -92,7 +92,7 @@
                     </div>
                 </aside>
                 <figure data-title="Filmesgyakornok program" data-description="Filmalap">
-                    <a href="#"><img width="1920" height="1224" src="https://source.unsplash.com/1920x1200/?architecture" alt=""></a>
+                    <a href="#"><img width="2560" height="1707" src="assets/img/slides/sample_02.jpg" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -111,7 +111,7 @@
                     </div>
                 </aside>
                 <figure data-title="Dolor sit amet lorem ipsum" data-description="Lorem visszhang">
-                    <a href="#"><img width="1200" height="1200" src="https://source.unsplash.com/1200x1200/?architecture" alt=""></a>
+                    <a href="#"><img width="5120" height="2751" src="assets/img/slides/sample_03.jpg" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -130,7 +130,7 @@
                     </div>
                 </aside>
                 <figure data-title="Program Magyarországon" data-description="Filmalap">
-                    <a href="#"><img width="1920" height="1224" src="https://source.unsplash.com/1920x1200/?architecture" alt=""></a>
+                    <a href="#"><img width="5120" height="2880" src="assets/img/slides/sample_04.jpg" alt=""></a>
                     <figcaption>
                         Eget risus varius blandit sit amet non magna
                     </figcaption>
@@ -152,7 +152,7 @@
                     </div>
                 </aside>
                 <figure data-title="Sit amet lorem ipsum" data-description="Sanyi ipsum">
-                    <a href="#"><img width="1200" height="1200" src="https://source.unsplash.com/1200x1200/?building" alt=""></a>
+                    <a href="#"><img width="5120" height="2880" src="assets/img/slides/sample_05.jpg" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -171,7 +171,7 @@
                     </div>
                 </aside>
                 <figure data-title="Lorem Sit amet lorem ipsum" data-description="Echo ipsum">
-                    <a href="#"><img width="800" height="1200" src="https://source.unsplash.com/800x1200/?building" alt=""></a>
+                    <a href="#"><img width="2000" height="1081" src="assets/img/slides/sample_06.jpg" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -190,7 +190,7 @@
                     </div>
                 </aside>
                 <figure data-title="Filmesgyakornok program" data-description="Filmalap">
-                    <a href="#"><img width="1920" height="1224" src="https://source.unsplash.com/1920x1200/?architecture" alt=""></a>
+                    <a href="#"><img width="5120" height="5120" src="assets/img/slides/sample_07.jpg" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -209,7 +209,7 @@
                     </div>
                 </aside>
                 <figure data-title="Sit amet lorem ipsum" data-description="Lorem visszhang">
-                    <a href="#"><img width="1400" height="1200" src="https://source.unsplash.com/1400x1200/?architecture" alt=""></a>
+                    <a href="#"><img width="5120" height="2750" src="assets/img/slides/sample_08.jpg" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -228,7 +228,7 @@
                     </div>
                 </aside>
                 <figure data-title="Program Magyarországon" data-description="Filmalap">
-                    <a href="#"><img width="1920" height="1400" src="https://source.unsplash.com/1920x1400/?architecture" alt=""></a>
+                    <a href="#"><img width="5335" height="3001" src="assets/img/slides/sample_09.jpg" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -247,7 +247,7 @@
                     </div>
                 </aside>
                 <figure data-title="Sit amet lorem ipsum" data-description="Sanyi ipsum">
-                    <a href="#"><img width="1200" height="1600" src="https://source.unsplash.com/1200x1600/?building" alt=""></a>
+                    <a href="#"><img width="2560" height="1863" src="assets/img/slides/sample_10.jpg" alt=""></a>
                 </figure>
             </div>
         </div>
@@ -266,14 +266,14 @@
                     </div>
                 </aside>
                 <figure data-title="Lorem Sit amet lorem ipsum" data-description="Echo ipsum">
-                    <a href="#"><img width="800" height="1200" src="https://source.unsplash.com/800x1200/?building" alt=""></a>
+                    <a href="#"><img width="2000" height="2000" src="assets/img/slides/sample_11.jpg" alt=""></a>
                 </figure>
             </div>
         </div>
         <div>
             <div class="citem">
                 <figure data-title="The End" data-description="Click to see full portfolio">
-                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="https://placehold.it/1000x1000/3b3b3b/?text&#x3D;?" alt=""></a>
+                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="assets/img/slides/https://placehold.it/1000x1000/3b3b3b/?text&#x3D;?" alt=""></a>
                     <figcaption>
                         The End - Click to see full portfolio
                     </figcaption>
@@ -288,62 +288,62 @@
 <div class="navcarousel">
         <div>
             <figure>
-                <img width="1800" height="1000" src="https://source.unsplash.com/1800x1000/?building,architecture" alt="">
+                <img width="2560" height="1812" src="assets/img/slides/sample_01.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="1920" height="1224" src="https://source.unsplash.com/1920x1200/?architecture" alt="">
+                <img width="2560" height="1707" src="assets/img/slides/sample_02.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="1200" height="1200" src="https://source.unsplash.com/1200x1200/?architecture" alt="">
+                <img width="5120" height="2751" src="assets/img/slides/sample_03.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="1920" height="1224" src="https://source.unsplash.com/1920x1200/?architecture" alt="">
+                <img width="5120" height="2880" src="assets/img/slides/sample_04.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="1200" height="1200" src="https://source.unsplash.com/1200x1200/?building" alt="">
+                <img width="5120" height="2880" src="assets/img/slides/sample_05.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="800" height="1200" src="https://source.unsplash.com/800x1200/?building" alt="">
+                <img width="2000" height="1081" src="assets/img/slides/sample_06.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="1920" height="1224" src="https://source.unsplash.com/1920x1200/?architecture" alt="">
+                <img width="5120" height="5120" src="assets/img/slides/sample_07.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="1400" height="1200" src="https://source.unsplash.com/1400x1200/?architecture" alt="">
+                <img width="5120" height="2750" src="assets/img/slides/sample_08.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="1920" height="1400" src="https://source.unsplash.com/1920x1400/?architecture" alt="">
+                <img width="5335" height="3001" src="assets/img/slides/sample_09.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="1200" height="1600" src="https://source.unsplash.com/1200x1600/?building" alt="">
+                <img width="2560" height="1863" src="assets/img/slides/sample_10.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="800" height="1200" src="https://source.unsplash.com/800x1200/?building" alt="">
+                <img width="2000" height="2000" src="assets/img/slides/sample_11.jpg" alt="">
             </figure>
         </div>
         <div>
             <figure>
-                <img width="1000" height="1000" src="https://placehold.it/1000x1000/3b3b3b/?text&#x3D;?" alt="">
+                <img width="1000" height="1000" src="assets/img/slides/https://placehold.it/1000x1000/3b3b3b/?text&#x3D;?" alt="">
             </figure>
         </div>
 </div>
@@ -353,7 +353,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Sunset boulevard" data-description="Helen &amp; Hard">
-                    <a href="#"><img width="1800" height="1000" src="https://source.unsplash.com/1800x1000/?building,architecture" alt=""></a>
+                    <a href="#"><img width="2560" height="1812" src="assets/img/slides/sample_01.jpg" alt=""></a>
                     <figcaption>
                         Diam eget risus varius blandit sit amet non magna
                     </figcaption>
@@ -375,7 +375,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Filmesgyakornok program" data-description="Filmalap">
-                    <a href="#"><img width="1920" height="1224" src="https://source.unsplash.com/1920x1200/?architecture" alt=""></a>
+                    <a href="#"><img width="2560" height="1707" src="assets/img/slides/sample_02.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -394,7 +394,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Dolor sit amet lorem ipsum" data-description="Lorem visszhang">
-                    <a href="#"><img width="1200" height="1200" src="https://source.unsplash.com/1200x1200/?architecture" alt=""></a>
+                    <a href="#"><img width="5120" height="2751" src="assets/img/slides/sample_03.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -413,7 +413,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Program Magyarországon" data-description="Filmalap">
-                    <a href="#"><img width="1920" height="1224" src="https://source.unsplash.com/1920x1200/?architecture" alt=""></a>
+                    <a href="#"><img width="5120" height="2880" src="assets/img/slides/sample_04.jpg" alt=""></a>
                     <figcaption>
                         Eget risus varius blandit sit amet non magna
                     </figcaption>
@@ -435,7 +435,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Sit amet lorem ipsum" data-description="Sanyi ipsum">
-                    <a href="#"><img width="1200" height="1200" src="https://source.unsplash.com/1200x1200/?building" alt=""></a>
+                    <a href="#"><img width="5120" height="2880" src="assets/img/slides/sample_05.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -454,7 +454,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Lorem Sit amet lorem ipsum" data-description="Echo ipsum">
-                    <a href="#"><img width="800" height="1200" src="https://source.unsplash.com/800x1200/?building" alt=""></a>
+                    <a href="#"><img width="2000" height="1081" src="assets/img/slides/sample_06.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -473,7 +473,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Filmesgyakornok program" data-description="Filmalap">
-                    <a href="#"><img width="1920" height="1224" src="https://source.unsplash.com/1920x1200/?architecture" alt=""></a>
+                    <a href="#"><img width="5120" height="5120" src="assets/img/slides/sample_07.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -492,7 +492,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Sit amet lorem ipsum" data-description="Lorem visszhang">
-                    <a href="#"><img width="1400" height="1200" src="https://source.unsplash.com/1400x1200/?architecture" alt=""></a>
+                    <a href="#"><img width="5120" height="2750" src="assets/img/slides/sample_08.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -511,7 +511,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Program Magyarországon" data-description="Filmalap">
-                    <a href="#"><img width="1920" height="1400" src="https://source.unsplash.com/1920x1400/?architecture" alt=""></a>
+                    <a href="#"><img width="5335" height="3001" src="assets/img/slides/sample_09.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -530,7 +530,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Sit amet lorem ipsum" data-description="Sanyi ipsum">
-                    <a href="#"><img width="1200" height="1600" src="https://source.unsplash.com/1200x1600/?building" alt=""></a>
+                    <a href="#"><img width="2560" height="1863" src="assets/img/slides/sample_10.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -549,7 +549,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="Lorem Sit amet lorem ipsum" data-description="Echo ipsum">
-                    <a href="#"><img width="800" height="1200" src="https://source.unsplash.com/800x1200/?building" alt=""></a>
+                    <a href="#"><img width="2000" height="2000" src="assets/img/slides/sample_11.jpg" alt=""></a>
                 </figure>
                 <aside class="ipanel">
                     <header class="ipanel__header">
@@ -568,7 +568,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="The End" data-description="Click to see full portfolio">
-                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="https://placehold.it/1000x1000/3b3b3b/?text&#x3D;?" alt=""></a>
+                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="assets/img/slides/https://placehold.it/1000x1000/3b3b3b/?text&#x3D;?" alt=""></a>
                     <figcaption>
                         The End - Click to see full portfolio
                     </figcaption>
