--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
         <div>
             <div class="citem">
                 <figure data-title="The End" data-description="Click to see full portfolio">
-                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="assets/img/slides/https://placehold.it/1000x1000/3b3b3b/?text&#x3D;?" alt=""></a>
+                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="https://placehold.it/1000x1000/3b3b3b/?text=?" alt=""></a>
                     <figcaption>
-                        The End - Click to see full portfolio
+                        The End<em>Click to see full portfolio</em>
                     </figcaption>
                 </figure>
             </div>
@@ -343,7 +343,7 @@
         </div>
         <div>
             <figure>
-                <img width="1000" height="1000" src="assets/img/slides/https://placehold.it/1000x1000/3b3b3b/?text&#x3D;?" alt="">
+                <img width="1000" height="1000" src="https://placehold.it/1000x1000/3b3b3b/?text=?" alt="">
             </figure>
         </div>
 </div>
@@ -568,7 +568,7 @@
         <li>
             <div class="slidecard">
                 <figure data-title="The End" data-description="Click to see full portfolio">
-                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="assets/img/slides/https://placehold.it/1000x1000/3b3b3b/?text&#x3D;?" alt=""></a>
+                    <a href="https://brickvisual.com/portfolio/"><img width="1000" height="1000" src="assets/img/slides/" alt=""></a>
                     <figcaption>
                         The End - Click to see full portfolio
                     </figcaption>
